fix change password

--- a/src/frontend/components/consumers/PasswordChangeForm/PasswordChangeForm.module.scss
+++ b/src/frontend/components/consumers/PasswordChangeForm/PasswordChangeForm.module.scss
@@ -2,18 +2,30 @@
 @import "@/styles/_mixins";
 @import "@/styles/_variables";
 
+.PasswordChangeForm__container {
+  max-width: 616px;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
 .PasswordChangeForm___title {
-  @include fonts($size: $font-size-xl);
-  margin-bottom: $m;
+  // @include fonts($size: $font-size-xl);
+  // margin-bottom: $m;
+  display: none;
+  @include lg-min {
+    display: block;
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
 }
 .PasswordChangeForm___form {
   margin-bottom: $m;
 }
 .PasswordChangeForm__inputWrapper {
   margin-bottom: $m;
-}
-.PasswordChangeForm__container {
-  @include wrapper;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 .PasswordChangeForm__errorMsg {
   @include invalidData;
