--- a/src/frontend/components/consumers/Modal/Modal.module.scss
+++ b/src/frontend/components/consumers/Modal/Modal.module.scss
@@ -16,6 +16,7 @@
 .Modal__window {
   padding: $m;
   background: $color-bg-light-1;
+  box-shadow: 2px 2px 10px black;
 }
 .Modal__closeIcon {
   display: block;
