blog section on home page

--- a/src/frontend/components/consumers/HomePageComponents/Blog/Blog.module.scss
+++ b/src/frontend/components/consumers/HomePageComponents/Blog/Blog.module.scss
@@ -33,13 +33,38 @@
       color: $color-green-dark-2;
     }
   }
+}
 
-  .articles {
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: 1fr;
-    @include md-min {
-      grid-template-columns: repeat(2, 1fr);
-    }
+.articlesSwiper {
+  padding-bottom: 2.5rem;
+  @include lg-min {
+    padding-bottom: 3rem;
+  }
+  @include xl-min {
+    padding-bottom: 3.5rem;
+  }
+
+  & :global(.swiper-pagination-bullets) {
+    top: auto;
+    bottom: 0.25rem;
+  }
+
+  & :global(.swiper-pagination-bullet) {
+    height: 1rem;
+    width: 1rem;
+  }
+
+  & :global(.swiper-pagination-bullet-active) {
+    background-color: $color-orange-500;
+  }
+
+  & :global(.swiper-pagination-bullet-active-prev),
+  & :global(.swiper-pagination-bullet-active-next) {
+    transform: scale(0.8);
+  }
+
+  & :global(.swiper-pagination-bullet-active-prev-prev),
+  & :global(.swiper-pagination-bullet-active-next-next) {
+    transform: scale(0.6);
   }
 }
