add InputRadioCarusel component and integrate it into OrderHistoryList

--- a/src/frontend/components/consumers/OrderHistoryList/OrderHistoryList.module.scss
+++ b/src/frontend/components/consumers/OrderHistoryList/OrderHistoryList.module.scss
@@ -96,6 +96,13 @@
   }
 }
 
+.PriceOfOrder {
+  flex-basis: 182px;
+  @include lg-max {
+    flex-basis: auto;
+  }
+}
+
 .DateAndAddress {
   display: flex;
   flex-direction: column;
