--- a/src/frontend/components/consumers/OrderHistoryList/OrderHistoryList.module.scss
+++ b/src/frontend/components/consumers/OrderHistoryList/OrderHistoryList.module.scss
@@ -108,3 +108,17 @@
   flex-direction: column;
   gap: 1rem;
 }
+
+.Date {
+  @include md-max {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.Address {
+  @include lg-max {
+    display: flex;
+    flex-direction: column;
+  }
+}
