--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,6 +16,7 @@ $color-green-3: #78cd7d; // button bg
 $color-green-dark-1: #6ca170; // input focus
 $color-green-dark-2: #67b06c; // button bg, button text, links hover
 $color-green-dark-3: #008000; // success text, loader, bg
+$color-green-dark-4: #005d36; // home page hero section bg
 
 $color-orange-50: #fffdf9; // input background
 $color-orange-100: #ffecd5; // button focus outline, ternary button disabled
