--- a/src/frontend/components/consumers/HomePageComponents/CallToAction/CallToAction.module.scss
+++ b/src/frontend/components/consumers/HomePageComponents/CallToAction/CallToAction.module.scss
@@ -99,6 +99,7 @@ $_runTextWidth: 14rem;
   flex-direction: row;
   flex-wrap: nowrap;
   overflow: hidden;
+  opacity: 0.45;
 
   &__item {
     display: flex;
@@ -111,7 +112,7 @@ $_runTextWidth: 14rem;
   }
 
   &__text {
-    color: $color-green-dark-3;
+    color: $color-green-dark-4;
     font-size: 0.875rem;
     font-weight: 700;
     letter-spacing: 1px;
