--- a/src/frontend/components/consumers/Footer/Footer.module.scss
+++ b/src/frontend/components/consumers/Footer/Footer.module.scss
@@ -104,15 +104,18 @@
     display: flex;
     flex-direction: column;
     gap: 0.375rem;
-    margin-top: 0.25rem;
+    border-top: 1px solid $color-green-dark-4;
+    padding-top: 1.5rem;
     @include md-min {
       align-items: center;
       flex-direction: row-reverse;
       justify-content: space-between;
       margin-top: 1.5rem;
+      padding-top: 2.5rem;
     }
     @include lg-min {
       margin-top: 2rem;
+      padding-top: 3rem;
     }
   }
 }
@@ -147,4 +150,9 @@
       background-color: $color-orange-500;
     }
   }
+}
+
+.fontSmall {
+  font-size: 1rem;
+  font-weight: 400;
 }
