footer background change

--- a/src/frontend/components/consumers/Footer/Footer.module.scss
+++ b/src/frontend/components/consumers/Footer/Footer.module.scss
@@ -4,7 +4,7 @@
 
 .footer {
   background-color: rgba($color-green-dark-3, 0.25);
-  background-image: url("/assets/footer-bg-pattern.png");
+  background-image: url("/assets/footer-bg.png");
   background-repeat: repeat;
   padding-top: 1.75rem;
   padding-bottom: 3rem;
